--- a/buildroot-arc-2015.08-3/Config.in
+++ b/buildroot-arc-2015.08-3/Config.in
@@ -138,7 +138,7 @@ config BR2_DEFCONFIG
 
 config BR2_DL_DIR
 	string "Download dir"
-	default "$(TOPDIR)/dl"
+	default "/home/jiedeng/share/work_/buildroot/dl-share"
 	help
 	  Directory to store all the source files that we need to fetch.
 	  If the Linux shell environment has defined the BR2_DL_DIR
